[gd_scene load_steps=21 format=2]

[ext_resource path="res://graphics/menu/MenuBackground.jpg" type="Texture" id=1]
[ext_resource path="res://graphics/menu/MenuOptions.png" type="Texture" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://graphics/menu/OptionsMenu.png" type="Texture" id=5]
[ext_resource path="res://graphics/menu/AddButton.png" type="Texture" id=6]
[ext_resource path="res://graphics/menu/RemoveButton.png" type="Texture" id=7]
[ext_resource path="res://graphics/lab/ArrowDown.png" type="Texture" id=9]
[ext_resource path="res://src/MenuOptionsMenu.gd" type="Script" id=12]
[ext_resource path="res://font/Uberal-regular.otf" type="DynamicFontData" id=14]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
size = 80
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=1450]
size = 56
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=1451]
bg_color = Color( 0.0431373, 0.0470588, 0.180392, 0.823529 )

[sub_resource type="DynamicFont" id=1446]
size = 45
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=1447]
tracks/0/type = "value"
tracks/0/path = NodePath("MenuOptionsMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.574349 ),
"update": 0,
"values": [ Vector2( 512, 175 ), Vector2( 1300, 175 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuOptions:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 2.46229 ),
"update": 0,
"values": [ Vector2( -164, 147 ), Vector2( 512, 147 ) ]
}

[sub_resource type="Animation" id=1448]
tracks/0/type = "value"
tracks/0/path = NodePath("MenuOptionsMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.9 ),
"transitions": PoolRealArray( 0.574349, 1 ),
"update": 0,
"values": [ Vector2( 1300, 175 ), Vector2( 512, 175 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuOptions:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 512, 147 ), Vector2( -164, 147 ) ]
}

[sub_resource type="Animation" id=1449]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.68179, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "starGameLoadScene"
} ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBlackBar" type="ColorRect" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_right = 62.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBlackBar" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 15 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 3 )

[node name="Content" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Important" type="Label" parent="CanvasLayer/DialogBox"]
visible = false
margin_left = 298.0
margin_top = 133.0
margin_right = 751.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IMPORTANT NOTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.599989, 0.599989 )
texture = ExtResource( 1 )

[node name="MenuOptions" type="Sprite" parent="."]
position = Vector2( 512, 147 )
scale = Vector2( 0.309483, 0.309483 )
texture = ExtResource( 2 )

[node name="startGame" type="TouchScreenButton" parent="MenuOptions"]
position = Vector2( -492.252, -155.097 )
scale = Vector2( 1.23749, 0.323119 )
normal = ExtResource( 3 )

[node name="startEpisodes" type="TouchScreenButton" parent="MenuOptions"]
position = Vector2( -492.252, 64.6239 )
scale = Vector2( 1.23749, 0.360817 )
normal = ExtResource( 3 )

[node name="options" type="TouchScreenButton" parent="MenuOptions"]
position = Vector2( -500.888, 294.039 )
scale = Vector2( 1.24109, 0.285422 )
normal = ExtResource( 3 )

[node name="MenuOptionsMenu" type="Sprite" parent="."]
position = Vector2( 1300, 175 )
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 5 )
script = ExtResource( 12 )

[node name="SoundAdd" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 418.005, -130.622 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 6 )

[node name="SoundLevel" type="Label" parent="MenuOptionsMenu"]
margin_left = 174.162
margin_top = -125.325
margin_right = 423.162
margin_bottom = -39.3243
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundRemove" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 65.5674, -130.622 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="MusicAdd" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 418.005, 34.2432 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 6 )

[node name="MusicLevel" type="Label" parent="MenuOptionsMenu"]
margin_left = 174.162
margin_top = 39.5406
margin_right = 423.162
margin_bottom = 125.541
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicRemove" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 65.5674, 34.2432 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="SFXAdd" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 418.005, 193.703 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 6 )

[node name="SFXLevel" type="Label" parent="MenuOptionsMenu"]
margin_left = 174.162
margin_top = 199.0
margin_right = 423.162
margin_bottom = 285.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXRemove" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( 65.5674, 193.703 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="Quality" type="OptionButton" parent="MenuOptionsMenu"]
margin_left = 147.0
margin_top = 349.811
margin_right = 585.0
margin_bottom = 442.811
rect_min_size = Vector2( 0.85, 0.85 )
rect_scale = Vector2( 0.85, 0.85 )
custom_constants/arrow_margin = 20
custom_fonts/font = SubResource( 1450 )
custom_icons/arrow = ExtResource( 9 )
custom_styles/normal = SubResource( 1451 )
text = " medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundTimer" type="Timer" parent="MenuOptionsMenu"]
one_shot = true

[node name="MusicTimer" type="Timer" parent="MenuOptionsMenu"]
one_shot = true

[node name="SFXTimer" type="Timer" parent="MenuOptionsMenu"]
one_shot = true

[node name="Back" type="TouchScreenButton" parent="MenuOptionsMenu"]
position = Vector2( -529.485, -317.4 )
scale = Vector2( 0.231634, 0.27055 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="MenuOptionsMenu"]
margin_left = -291.804
margin_top = 207.215
margin_right = -16.804
margin_bottom = 265.215
custom_fonts/font = SubResource( 1446 )
text = "(special effects)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GetToMainMenu = SubResource( 1447 )
anims/GetToOptionsMenu = SubResource( 1448 )
anims/startGameAnim = SubResource( 1449 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 2.0

[connection signal="released" from="CanvasLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="MenuOptions/startGame" to="." method="_on_startGame_released"]
[connection signal="released" from="MenuOptions/startEpisodes" to="." method="_on_startEpisodes_released"]
[connection signal="released" from="MenuOptions/options" to="." method="_on_options_released"]
[connection signal="pressed" from="MenuOptionsMenu/SoundAdd" to="MenuOptionsMenu" method="_on_SoundAdd_pressed"]
[connection signal="released" from="MenuOptionsMenu/SoundAdd" to="MenuOptionsMenu" method="_on_SoundAdd_released"]
[connection signal="pressed" from="MenuOptionsMenu/SoundRemove" to="MenuOptionsMenu" method="_on_SoundRemove_pressed"]
[connection signal="released" from="MenuOptionsMenu/SoundRemove" to="MenuOptionsMenu" method="_on_SoundRemove_released"]
[connection signal="pressed" from="MenuOptionsMenu/MusicAdd" to="MenuOptionsMenu" method="_on_MusicAdd_pressed"]
[connection signal="released" from="MenuOptionsMenu/MusicAdd" to="MenuOptionsMenu" method="_on_MusicAdd_released"]
[connection signal="pressed" from="MenuOptionsMenu/MusicRemove" to="MenuOptionsMenu" method="_on_MusicRemove_pressed"]
[connection signal="released" from="MenuOptionsMenu/MusicRemove" to="MenuOptionsMenu" method="_on_MusicRemove_released"]
[connection signal="pressed" from="MenuOptionsMenu/SFXAdd" to="MenuOptionsMenu" method="_on_SFXAdd_pressed"]
[connection signal="released" from="MenuOptionsMenu/SFXAdd" to="MenuOptionsMenu" method="_on_SFXAdd_released"]
[connection signal="pressed" from="MenuOptionsMenu/SFXRemove" to="MenuOptionsMenu" method="_on_SFXRemove_pressed"]
[connection signal="released" from="MenuOptionsMenu/SFXRemove" to="MenuOptionsMenu" method="_on_SFXRemove_released"]
[connection signal="item_selected" from="MenuOptionsMenu/Quality" to="." method="_on_Quality_item_selected"]
[connection signal="timeout" from="MenuOptionsMenu/SoundTimer" to="MenuOptionsMenu" method="_on_SoundTimer_timeout"]
[connection signal="timeout" from="MenuOptionsMenu/MusicTimer" to="MenuOptionsMenu" method="_on_MusicTimer_timeout"]
[connection signal="timeout" from="MenuOptionsMenu/SFXTimer" to="MenuOptionsMenu" method="_on_SFXTimer_timeout"]
[connection signal="released" from="MenuOptionsMenu/Back" to="MenuOptionsMenu" method="_on_Back_released"]
